--- a/Index.html
+++ b/Index.html
@@ -23,7 +23,7 @@
         <h1>ANKITA CHIKATE</h1>
         
         <p>
-          I'm currently a Btech Undergraduate from Computer Science Engineering
+          I'm currently Passed Out Btech from Computer Science Engineering in 2023.
           <br />
           Looking Up for Internship and Placement Opportunities as a
           <br/>
