--- a/Index.html
+++ b/Index.html
@@ -34,7 +34,7 @@
         <a href="https://www.linkedin.com/in/ankita-chikate-a73549235/ target="_blank"><i class="fa-brands fa-linkedin-in" style="--i: 8"></i></a>
         
         <br />
-        <a href="MY FINAL RESUME.pdf" title=""<i download></i>
+        <a href="MY CV.pdf" title=""<i download></i>
         <button class="btn">Download CV</button>
       </a>
       </div>
